# FastMDXplora

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  PACKAGE_STRUCTURE.md  README.md  STRUCTURE.md  STRUCTURE.txt  bump_version.sh  coverage.xml  doctor.py  environment.yml  fastmdx  health.py  hsp90_casestudy.md  hsp90_casestudy_indev.md  hsp90_tutorial.md  pyproject.toml  pytest.ini  release.sh  requirements.txt  setup.py  test_q_value_demo.py  test_qvalue_demo.py  tree.txt
.github/workflows/: old_test.yml  publish.yml  release.yml  test.yml  tests.yml
FastMDAnalysis/: __init__.py  cli.py  datasets.py  utils.py
FastMDAnalysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
FastMDAnalysis/analysis/: base.py  cluster.py  dimred.py  hbonds.py  rg.py  rmsd.py  rmsf.py  sasa.py  ss.py
assets/: README.md
docs/: api.md  conf.py  configuration.md  index.md  installation.md  live_dashboard.md  pdb_smoke_campaign.md  phases.md  region_highlights.md  requirements.txt  usage_examples.md
docs/source/: conf.py  contributing.rst  datasets.rst  getting-started.rst  index.rst
docs/source/analysis/: cluster.rst  dihedrals.rst  dimred.rst  hbonds.rst  index.rst  q_value.rst  qvalue.rst  rg.rst  rmsd.rst  rmsf.rst  sasa.rst  ss.rst
docs/source/api/: generated.rst  index.rst
docs/source/usage/: api.rst  cli.rst  outputs.rst  plotting.rst
driftmd_workbench/: .gitignore  README.md  pyproject.toml
driftmd_workbench/docs/: analysis_only.md  demo_outputs.md  installation.md  quickstart.md  windows_powershell.md
driftmd_workbench/scripts/: __init__.py  run_drift_smoke.py
driftmd_workbench/src/driftmd/: __init__.py  __main__.py  analyze.py  cli.py  prepare.py  records.py  report.py  simulate.py  workflow.py
driftmd_workbench/tests/: test_cli.py  test_smoke_script.py  test_workflow.py
examples/: README.md  pdb_list.txt
recipes/fastmdx-alias/: meta.yaml
recipes/fastmdxplora/: meta.yaml
scripts/: README.md  bump_version.sh  make_benzene.py  release.sh  run_pdb_smoke_campaign.py
shim-package/: README.md  pyproject.toml
shim-package/src/fastmdx/: __init__.py
shims/fastmdanalysis/: README.md  pyproject.toml
shims/fastmdanalysis/src/fastmdanalysis/: __init__.py
shims/fastmdxplorer/: README.md  pyproject.toml
shims/fastmdxplorer/src/fastmdxplorer/: __init__.py
slides/: generate_slideshow.py
src/fastmdanalysis/: __init__.py  cli.py  utils.py
src/fastmdanalysis/analysis/: __init__.py  analyze.py  base.py  cluster.py  dbscan.py  dihedrals.py  dimred.py  hbonds.py  hierarchical.py  kmeans.py  mds.py  pca.py  q_value.py  qvalue.py  rg.py  rmsd.py  rmsf.py  sasa.py  ss.py  tsne.py
src/fastmdanalysis/cli/: _common.py  _system_loader.py  analyze.py  main.py  simple.py
src/fastmdanalysis/utils/: __init__.py  io.py  options.py  plotting.py
src/fastmdxplora/: __init__.py  bootstrap.py  install.py  orchestrator.py
src/fastmdxplora/analysis/: __init__.py  analyze.py  base.py  cluster.py  contacts.py  dihedrals.py  dimred.py  hbonds.py  ligand_rmsd.py  ligand_rmsf.py  loading.py  orchestrator.py  pl_hbonds.py  plotting.py  qvalue.py  rg.py  rmsd.py  rmsf.py  sasa.py  ss.py
src/fastmdxplora/batch/: __init__.py  compare.py  explorer.py  sweep.py
src/fastmdxplora/cli/: __init__.py  main.py
src/fastmdxplora/config/: __init__.py  generate.py  loader.py  schema.py
src/fastmdxplora/datasets/: __init__.py  trp_cage.py
src/fastmdxplora/live/: __init__.py  launcher.py  ligand_detection.py  live_frames.py  protein_preview.py  server.py  structure_info.py  telemetry.py  trajectory_playback.py
src/fastmdxplora/live/static/: charts.js  dashboard.css  dashboard.js  molecule-viewer.js  simulation-builder.js
src/fastmdxplora/live/templates/: dashboard.html
src/fastmdxplora/report/: __init__.py  bundle.py  context.py  dashboard.py  document.py  region_highlights.py  run.py  slides.py  summary_figure.py
src/fastmdxplora/setup/: __init__.py  forcefields.py  ligand.py  pdbfix.py  pipeline.py  prepare.py
src/fastmdxplora/simulation/: __init__.py  pipeline.py  plumed.py  runner.py
src/fastmdxplora/utils/: __init__.py  logging.py  native_output.py  presenter.py
tests/: conftest.py  fastMDA_test.py  test_analysis_basic.py  test_analysis_errors.py  test_analysis_layer.py  test_analysis_plotting_styles.py  test_analysis_scope.py  test_analyze_api.py  test_analyze_coverage.py  test_analyze_orchestrator.py  test_analyze_version_header.py  test_base_io.py  test_batch.py  test_cli.py  test_cli_analyze.py  test_cli_flags.py  test_cli_version_header.py  test_cluster_dimred.py  test_cluster_utils.py  test_compare.py  test_concrete_analyses.py  test_config.py  test_dashboard.py  test_dashboard_coverage.py  test_dashboard_launcher.py  test_dihedrals_residue_options.py  test_dimred_methods.py  test_docs_examples.py  test_forcefield_selector.py  test_hbonds.py  test_imports.py  test_init_coverage.py  test_init_version_and_logging.py  test_install_bootstrap.py  test_ligand.py  test_ligand_rmsd.py  test_live_dashboard.py  test_logging.py  test_main.py  test_md_engine_controls.py  (+17 more)
