[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmdxplora"
dynamic = ["version"]
description = "FastMDXplora: Fully Automated SysTem for Molecular Dynamics eXploration"
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = { text = "MIT" }
authors = [
    { name = "Adekunle Aina" },
    { name = "Derrick Kwan" },
]
maintainers = [
    { name = "Adekunle Aina" },
]
keywords = [
    "molecular-dynamics",
    "md-simulation",
    "trajectory-analysis",
    "automation",
    "orchestrator",
    "computational-chemistry",
    "biophysics",
    "structural-biology",
    "reproducibility",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
# Standalone, self-contained. No runtime dependency on external MD-analysis packages or
# fastmdsimulation. Heavy MD dependencies (OpenMM, MDTraj, PDBFixer) are
# introduced incrementally in subsequent releases; v0.1.0 ships the
# orchestrator scaffold with placeholder phases that can run on a clean
# Python environment.
dependencies = [
    "numpy>=1.22",
    "pyyaml>=6.0",
    "mdtraj>=1.9.7",
    "matplotlib>=3.5",
    "scikit-learn>=1.0",
    "pandas>=1.4",
    "python-pptx>=0.6.21",
]

[project.optional-dependencies]
# The setup and simulation phases need the OpenMM stack: PDBFixer
# (setup only) and OpenMM (both phases). Both are distributed primarily
# via conda-forge; pip wheels exist for OpenMM but not reliably for
# PDBFixer across all platforms. The pip path here is best-effort —
# `conda install -c conda-forge pdbfixer openmm` is recommended.
# The group is named `md` because it covers the molecular-dynamics
# chemistry phases (setup + simulation), not just one of them.
md = [
    "pdbfixer",
    "openmm>=8.0",
]
# Protein-ligand systems: OpenFF small-molecule parameterization via
# openmmforcefields' SystemGenerator. Heavy tree (AmberTools, RDKit, OpenFF);
# best installed via conda-forge. pip path is best-effort.
ligand = [
    "openff-toolkit>=0.16",
    "openmmforcefields>=0.12",
]
plumed = [
    "openmm-plumed>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5.0",
    "python-pptx>=0.6.21",
]

[project.urls]
Homepage = "https://github.com/aai-research-lab/FastMDXplora"
Documentation = "https://fastmdxplora.readthedocs.io"
Repository = "https://github.com/aai-research-lab/FastMDXplora"
Issues = "https://github.com/aai-research-lab/FastMDXplora/issues"
Changelog = "https://github.com/aai-research-lab/FastMDXplora/blob/main/CHANGELOG.md"

[project.scripts]
fastmdx = "fastmdxplora.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fastmdxplora = ["live/static/*"]

[tool.setuptools_scm]
write_to = "src/fastmdxplora/_version.py"
fallback_version = "0.1.0"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
