[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftmd-workbench"
version = "0.1.0"
description = "A compact molecular-dynamics workflow runner with phase-aware reports."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "DriftMD Workbench contributors"}]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.23",
]

[project.optional-dependencies]
test = ["pytest>=7"]
slides = ["python-pptx>=0.6.21"]
md = ["openmm>=8"]

[project.scripts]
driftmd = "driftmd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
