[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmdxplorer"
version = "2.0.0"
description = "FastMDXplorer has been renamed to FastMDXplora; this package installs fastmdxplora."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Adekunle Aina" },
    { name = "Derrick Kwan" },
]
keywords = ["fastmdxplora", "fastmdxplorer", "molecular-dynamics"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "fastmdxplora>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/aai-research-lab/FastMDXplora"
Repository = "https://github.com/aai-research-lab/FastMDXplora"

[tool.setuptools.packages.find]
where = ["src"]
